set primary invert colour to white

--- a/my-portfolio/src/assets/main.scss
+++ b/my-portfolio/src/assets/main.scss
@@ -1,5 +1,6 @@
 // Customizations Here
 $primary: #ECB410;
+$primary-invert: #ffffff;
 $link-hover: #C15604;
 $link-focus: $link-hover;
 $navbar-item-hover-color: $link-hover;
