--- a/my-portfolio/src/assets/main.scss
+++ b/my-portfolio/src/assets/main.scss
@@ -1,8 +1,8 @@
 // Customizations Here
-$primary: #ECB410;
+$primary: #ecb410;
 $primary-invert: #ffffff;
 $info: #797920;
-$link: #C15604;
+$link: #c15604;
 $link-hover: #797920;
 $link-focus: $link-hover;
 $navbar-item-hover-color: $link-hover;
@@ -10,5 +10,5 @@ $navbar-item-hover-background-color: none;
 $button-focus-box-shadow-size: 0px;
 
 // Bulma Import
-@import '~bulma';
-@import '~bulma-ribbon/src/sass';
+@import "~bulma";
+@import "~bulma-ribbon/src/sass";
