Badge show project count

--- a/my-portfolio/src/assets/main.scss
+++ b/my-portfolio/src/assets/main.scss
@@ -12,3 +12,4 @@ $button-focus-box-shadow-size: 0px;
 // Bulma Import
 @import "~bulma";
 @import "~bulma-ribbon/src/sass";
+@import "~@creativebulma/bulma-badge/src/sass/index.sass";
